# PhoenixOS

./: .gitmodules  Makefile  README.md
dockerfiles/: build_113.Dockerfile
examples/diffusion/: inference.py  train.py
examples/llama2-13b-chat-hf/: inference.py
examples/ppo/: main.py
examples/resnet/: inference.py  train.py
migration/: CMakeLists.txt  migrate.cpp  restore.cpp
osdi_data/cuda-checkpoint/: diffusion_infer.txt  llama2_13B_fp32_infer.txt  ppo.txt  resnet_infer.txt  resnet_train.txt
osdi_data/phos/: diffusion_infer_cow.txt  difussion_ifner_dirty.txt  llama2_13B_fp32_infer_cow.txt  llama2_13B_fp32_infer_dirty.txt  ppo_cow.txt  ppo_dirty.txt  resnet_infer_cow.txt  resnet_infer_dirty.txt  resnet_train_cow.txt  resnet_train_dirty.txt  resnet_train_dump_cow.txt
osdi_data/singularity/: diffusion_infer.txt  llama2_13B_fp32_infer.txt  ppo.txt  resnet_infer.txt  resnet_train.txt
pos/include/: checkpoint.h  common.h  handle.h  worker.h
pos/src/: checkpoint_disable.cpp  checkpoint_enable.cpp  handle.cpp  worker.cpp  workspace.cpp
samples/: .gitignore  gpt2.elf  migrate  migrate_action_script.sh  readme.md  restore  restore_action_script.sh
samples/bert/: .gitignore  inference.py  run_ckpt.sh  run_client.sh  run_coldstart.sh  run_server.sh
samples/bert_pretrain/: download.py  run_server.sh  train.py
samples/bert_training/: .gitignore  readme.md
samples/cuda_resnet_train_migration/: clnt.sh  docker-compose.yaml  enter_svr.sh  readme.md  redis.sh  refresh_svr.sh  start_svr.sh  stop_svr.sh  svr.sh
samples/custom_kernels/: main  (+5 more)
tmp/: ptx.txt
(+78 files in other folders)
